[package]
name = "pytrie"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pytrie"
crate-type = ["cdylib"]
[dependencies]
pyo3 = { version = "0.14.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"