[package]
name = "pytrie"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pytrie"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.14.0", features = ["extension-module"] }
trie_rs = {version = "0.1.0", path = "../trie_rs" }
regex = "1.5"