[package]
name = "trie_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "trie_rs"
crate-type = ["cdylib", "dylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
serde_yaml = "0.8"
bincode = "1.3.3"